--- a/build.gradle
+++ b/build.gradle
@@ -25,13 +25,16 @@ def fileName = projName + '-' + version
 repositories {
     mavenCentral() // for transitive dependencies
     maven { url 'https://jitpack.io/' }
+    maven { url 'https://libraries.minecraft.net' }
 
 }
 
 dependencies {
     implementation 'org.jetbrains:annotations:20.1.0'
     compileOnly 'org.projectlombok:lombok:' + lombokVersion
+    compileOnly 'com.mojang:brigadier:1.0.18'
 
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'com.github.Querz:NBT:6.1'
     implementation group: 'org.json', name: 'json', version: '20090211'
     implementation 'com.google.code.gson:gson:2.8.9'
@@ -39,6 +42,10 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
     implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
+    implementation group: 'org.json', name: 'json', version: '20211205'
+    implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.1.0'
+
+
 
 
     annotationProcessor 'org.projectlombok:lombok:' + lombokVersion
