--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ version '0.1a'
 
 def projName = 'PinguFramework'
 
-def lombokVersion = '1.18.22'
+def lombokVersion = '1.18.24'
 def nettyVersion = '4.1.72.Final'
 
 
@@ -30,22 +30,24 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:20.1.0'
     compileOnly 'org.projectlombok:lombok:' + lombokVersion
     compileOnly 'com.mojang:brigadier:1.0.18'
 
+    implementation "net.kyori:adventure-api:4.11.0"
+    implementation "net.kyori:adventure-text-serializer-gson:4.11.0"
+    implementation "net.kyori:adventure-text-minimessage:4.11.0"
+    implementation "net.kyori:adventure-nbt:4.11.0"
+
+    implementation 'org.jetbrains:annotations:23.0.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
-    implementation 'com.github.Querz:NBT:6.1'
-    implementation group: 'org.json', name: 'json', version: '20090211'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation group: 'org.json', name: 'json', version: '20200518'
+    implementation 'com.google.code.gson:gson:2.10'
     implementation 'io.netty:netty-all:' + nettyVersion
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+//    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+//    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
     implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
     implementation group: 'org.json', name: 'json', version: '20211205'
-    implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.1.0'
-
-
+//    implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.1.0'
 
 
     annotationProcessor 'org.projectlombok:lombok:' + lombokVersion
