--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ repositories {
 
 dependencies {
     compileOnly 'org.projectlombok:lombok:' + lombokVersion
-    compileOnly 'com.mojang:brigadier:1.0.18'
+    implementation 'com.mojang:brigadier:1.0.18'
 
     implementation "net.kyori:adventure-api:4.11.0"
     implementation "net.kyori:adventure-text-serializer-gson:4.11.0"
@@ -43,11 +43,9 @@ dependencies {
     implementation group: 'org.json', name: 'json', version: '20200518'
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'io.netty:netty-all:' + nettyVersion
-//    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
-//    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
     implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
     implementation group: 'org.json', name: 'json', version: '20211205'
-//    implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.1.0'
+    implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.5.11'
 
 
     annotationProcessor 'org.projectlombok:lombok:' + lombokVersion
